@@ -60,7 +60,7 @@ public class Triangle extends Polygon {
         double v = Math.sqrt(vSquared);
         double w = Math.sqrt(wSqaured);
         if(u < 1 && v< 1 && w < 1 && !Util.isZero(u) && !Util.isZero(v)  && !Util.isZero(w) &&  Util.isZero(w+v+u-1)){
-            return Arrays.asList(P) ; 
+            return List.of(P) ; 
         } 
         return null ;
     } 
